# negative-cycle-canceling-windfarms

./: CMakeLists.txt  README.md
cmake/: FindOGDF.cmake  qt.cmake
include/Algorithms/: EscapingNCC.h  NegativeCycleCanceling.h  SingleRunNCC.h
include/Algorithms/DeltaStrategies/: DecreasingDeltaStrategy.h  DeltaStrategy.h  IncreasingDecreasingStrategy.h  IncreasingDeltaStrategy.h  RandomDeltaStrategy.h  SameNextDeltaStrategy.h
include/Algorithms/DetectionStrategies/: BellmanFord.h  NegativeCycleDetection.h
include/Algorithms/Distance/: Dijkstra.h  EdgeLength.h  EuclideanLength.h  UnitLength.h
include/Algorithms/EscapeStrategies/: EscapingBonbons.h  EscapingFreeCables.h  EscapingLeaves.h  EscapingNewInitialization.h  EscapingStrategy.h  KeeperOfEscapingStrategies.h
include/Algorithms/InitializationStrategies/: Collecting.h  InitializationStrategy.h  NonCollecting.h
include/Algorithms/ResidualCosts/: EscapingResidualCostComputer.h  ResidualCostComputerFreeSatisfiedEdges.h  SpecializedResidualCosts.h  StandardResidualCostComputer.h
include/Auxiliary/: Constants.h  ReturnCodes.h  Timer.h
include/Builders/: AlgorithmControler.h  NCCControler.h
include/DataStructures/: Cabletypes.h  InputInformation.h  Instance.h  OutputInformation.h
include/DataStructures/Graphs/: Windfarm.h  WindfarmResidual.h
include/DataStructures/Graphs/Edges/: Edge.h
include/DataStructures/Graphs/Vertices/: Vertex.h
include/DataStructures/Labels/: OneDistanceLabel.h  TwoDistancesLabel.h
include/IO/: Auxiliary.h  DummyNCCLogger.h  NCCLogger.h  NegativeCycleRuntimeCollection.h  NegativeCycleRuntimeRow.h  NegativeCycleSummaryRow.h  ParserFunctions.h
scripts/: useThisToBuild.sh
src/Algorithms/: NegativeCycleCanceling.cpp
src/Algorithms/Distance/: Dijkstra.cpp
src/Algorithms/EscapeStrategies/: EscapingBonbons.cpp  EscapingFreeCables.cpp  EscapingLeaves.cpp
src/Builders/: NCCControler.cpp
src/DataStructures/: Cabletypes.cpp
src/DataStructures/Graphs/: Windfarm.cpp  WindfarmResidual.cpp
src/Runnables/: main.cpp
